--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -25,7 +25,7 @@
             width: 4.6rem;
 
             & svg {
-                transform: rotate(180);
+                transform: rotate(180deg);
             }
             & hr {
                 display: block;
