add code highlight

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -47,7 +47,6 @@
         &-wrapper {
             position: relative;
             width: 100%;
-            order: 2;
             cursor: pointer;
         }
 
@@ -59,9 +58,8 @@
     &__body {
         display: flex;
         flex-direction: column;
-        order: 3;
+        order: 2;
         width: 100%;
-        padding: 5px;
         cursor: pointer;
 
         &__title {
@@ -77,6 +75,7 @@
                 width: 100%;
                 white-space: nowrap;
                 margin-bottom: 5px;
+                padding: 5px;
             }
         }
 
@@ -88,12 +87,14 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            padding: 0 5px;
         }
 
         &__meta {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 5px;
 
             & span {
                 margin-right: 5px;
